Fix main-content overflow

--- a/orders-front/src/index.css
+++ b/orders-front/src/index.css
@@ -28,7 +28,7 @@ body,
 }
 
 #main-content {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   overflow: auto;
 }
 
